--- a/composer.json
+++ b/composer.json
@@ -1,25 +1,25 @@
 {
-    "name": "laravel/laravel",
+    "name": "rokde/laravel-chat-application",
     "type": "project",
-    "description": "The skeleton application for the Laravel framework.",
-    "keywords": ["laravel", "framework"],
+    "description": "Laravel Chat Application with support of reverb for live chatting possibilities",
+    "keywords": ["laravel", "reverb", "chat", "realtime"],
     "license": "MIT",
     "require": {
-        "php": "^8.2",
-        "inertiajs/inertia-laravel": "^1.0",
-        "laravel/framework": "^11.9",
+        "php": "^8.",
+        "inertiajs/inertia-laravel": "^1.3",
+        "laravel/framework": "^11.10",
         "laravel/jetstream": "^5.1",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
-        "tightenco/ziggy": "^2.0"
+        "tightenco/ziggy": "^2.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
-        "laravel/pint": "^1.13",
-        "laravel/sail": "^1.26",
+        "laravel/pint": "^1.16",
+        "laravel/sail": "^1.29",
         "mockery/mockery": "^1.6",
-        "nunomaduro/collision": "^8.0",
-        "phpunit/phpunit": "^11.0.1"
+        "nunomaduro/collision": "^8.1",
+        "phpunit/phpunit": "^11.2"
     },
     "autoload": {
         "psr-4": {
