--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "tightenco/ziggy": "^2.2"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^3.0",
         "fakerphp/faker": "^1.23",
         "laravel/pint": "^1.16",
         "laravel/sail": "^1.29",
