--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@tailwindcss/forms": "^0.5.7",
         "@tailwindcss/typography": "^0.5.10",
         "@vitejs/plugin-vue": "^5.0.0",
+        "@vueuse/core": "^10.11.0",
         "autoprefixer": "^10.4.16",
         "axios": "^1.6.4",
         "dayjs": "^1.11.11",
