--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
         "autoprefixer": "^10.4.16",
         "axios": "^1.6.4",
         "dayjs": "^1.11.11",
+        "heroicons": "^2.1.4",
         "laravel-echo": "^1.16.1",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.32",
         "pusher-js": "^8.4.0-rc2",
+        "tailwind-merge": "^2.3.0",
         "tailwindcss": "^3.4.0",
         "vite": "^5.0",
         "vue": "^3.3.13"
