--- a/package.json
+++ b/package.json
@@ -3,18 +3,24 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vue-tsc && vite build",
+        "lint": "eslint --ext .ts,.js,.vue --ignore-path .gitignore ."
     },
     "devDependencies": {
+        "@antfu/eslint-config": "^2.21.2",
         "@heroicons/vue": "^2.1.4",
         "@inertiajs/vue3": "^1.0.14",
         "@tailwindcss/forms": "^0.5.7",
         "@tailwindcss/typography": "^0.5.10",
+        "@types/lodash": "^4.17.6",
+        "@types/node": "^20.14.9",
+        "@types/ziggy-js": "^1.8.0",
         "@vitejs/plugin-vue": "^5.0.0",
         "@vueuse/core": "^10.11.0",
         "autoprefixer": "^10.4.16",
         "axios": "^1.6.4",
         "dayjs": "^1.11.11",
+        "eslint": "^8.57.0",
         "heroicons": "^2.1.4",
         "laravel-echo": "^1.16.1",
         "laravel-vite-plugin": "^1.0",
@@ -22,7 +28,10 @@
         "pusher-js": "^8.4.0-rc2",
         "tailwind-merge": "^2.3.0",
         "tailwindcss": "^3.4.0",
+        "typescript": "^5.5.3",
         "vite": "^5.0",
-        "vue": "^3.3.13"
+        "vue": "^3.3.13",
+        "vue-tsc": "^2.0.26",
+        "ziggy-js": "^2.2.1"
     }
 }
