--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "@heroicons/vue": "^2.1.4",
         "@inertiajs/vue3": "^1.0.14",
         "@tailwindcss/forms": "^0.5.7",
-        "@tailwindcss/typography": "^0.5.10",
+        "@tailwindcss/typography": "^0.5.13",
         "@types/lodash": "^4.17.6",
         "@types/node": "^20.14.9",
         "@types/ziggy-js": "^1.8.0",
@@ -28,10 +28,17 @@
         "pusher-js": "^8.4.0-rc2",
         "tailwind-merge": "^2.3.0",
         "tailwindcss": "^3.4.0",
+        "tailwindcss-animate": "^1.0.7",
         "typescript": "^5.5.3",
         "vite": "^5.0",
         "vue": "^3.3.13",
         "vue-tsc": "^2.0.26",
         "ziggy-js": "^2.2.1"
+    },
+    "dependencies": {
+        "@radix-icons/vue": "^1.0.0",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.1",
+        "radix-vue": "^1.9.0"
     }
 }
