--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     },
     "devDependencies": {
         "@antfu/eslint-config": "^2.21.2",
+        "@headlessui/vue": "^1.7.22",
         "@heroicons/vue": "^2.1.4",
         "@inertiajs/vue3": "^1.0.14",
         "@tailwindcss/forms": "^0.5.7",
@@ -33,6 +34,7 @@
         "vite": "^5.0",
         "vue": "^3.3.13",
         "vue-tsc": "^2.0.26",
+        "vue3-emoji-picker": "^1.1.8",
         "ziggy-js": "^2.2.1"
     },
     "dependencies": {
